--- a/todo.txt
+++ b/todo.txt
@@ -38,7 +38,7 @@ weapons laws
 scuba suit, remove water ability from hazmat
 fire suit too?
 
-nerf radioactive stuff
+--nerf radioactive stuff
 
 craft for boots
 
